[package]
name = "libtracecmd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

[build-dependencies]
pkg-config = "*"

[dev-dependencies]
argh = "0.1"
once_cell = "1.0"

[[example]]
name = "top_n_events"
path = "examples/top_n_events.rs"
