[package]
name = "libtracecmd"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust wrapper of libtracecmd"
homepage = "https://github.com/google/libtracecmd-rs"
documentation = "https://docs.rs/libtracecmd/"
repository = "https://github.com/google/libtracecmd-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

[build-dependencies]
bindgen = "0.65"
anyhow = "1.0"
pkg-config = "0.3"

[dev-dependencies]
argh = "0.1"
once_cell = "1.0"

[[example]]
name = "top_n_events"
path = "examples/top_n_events.rs"
